[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psp-video-converter"
version = "1.0"
description = "A CLI tool to convert videos by using FFmpeg presets to PSP correct format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "max-koder"}
]
dependencies = [
    "rich",
    "ffmpeg-python"
]

[project.scripts]
psp-video-converter = "psp_video_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]